# nas-fault-simulator

./: .dockerignore  .env  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.test  README-LLM-CONF.md  README-LLM.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml  run-nas-simulator.sh  simple_functional_test.sh
.claude/: settings.local.json
.claude/plans/: management-layer.md
.github/workflows/: ci.yml  release.yml
nas_sim/: __init__.py  __main__.py  build.py  cli.py  config.py  console.py  containers.py  docker_utils.py  port_utils.py  run.py  test.py
scripts/: build-fuse.sh  build.sh  config.sh  mount-smb.sh  run-fuse.sh  run_tests.sh  umount-smb.sh
src/fuse-driver/: Makefile  README-LLM-FUSE.md  nas-emu-fuse.conf
src/fuse-driver/docker/: Dockerfile.build  Dockerfile.dev  Dockerfile.runtime  entrypoint.sh  smb.conf  start-services.sh
src/fuse-driver/src/: config.c  config.h  event_emitter.c  event_emitter.h  fault_injector.c  fault_injector.h  fs_common.c  fs_common.h  fs_fault_injector.c  fs_operations.c  fs_operations.h  log.c  log.h
src/fuse-driver/tests/: test_event_emission.py
src/fuse-driver/tests/configs/: corruption_corner_data.conf  corruption_corner_prob.conf  corruption_high.conf  corruption_low.conf  corruption_medium.conf  corruption_minimal.conf  corruption_none.conf  corruption_zero.conf  (+18 more)
tests/: conftest.py  smb_helpers.py  test_basic_ops.py  test_corruption.py  test_delay.py  test_errors.py  test_event_emission.py  test_large_file.py  test_opcount.py  test_partial.py  test_timing.py  validation.py
(+21 files in other folders)
