[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nas-fault-simulator"
dynamic = ["version"]
description = "Cross-platform orchestration for NAS Fault Simulator"
requires-python = ">=3.9"
dependencies = ["docker>=7.0"]

[project.scripts]
nas-sim = "nas_sim.cli:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["nas_sim*"]
